On Enterprise build creating a collection in a replica set with the storageEngine.inMemory option breaks secondaries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 7.2.1, 7.3.0-rc0, 7.0.5, 6.0.13, 5.0.24, 4.4.28
    • Affects Version/s: 7.1.1, 4.4.26, 7.0.4, 6.0.13, 5.0.24, 7.2.0
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v7.2, v7.1, v7.0, v6.0, v5.0, v4.4
    • Hide

      1. Create a replica set
      2. Connect to the Primary and run:

      db.createCollection("col1", { storageEngine: { inMemory: { engineConfig: { inMemorySizeGB: 5 } } } });
      

      3. Watch how all secondaries crash

      Show
      1. Create a replica set 2. Connect to the Primary and run: db.createCollection( "col1" , { storageEngine: { inMemory: { engineConfig: { inMemorySizeGB: 5 } } } }); 3. Watch how all secondaries crash
    • Execution Team 2023-12-11, Execution Team 2023-12-25
    • 120
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      All secondaries can be broken with a single createCollection command:

      {"t":{"$date":"2023-12-02T14:55:21.692+11:00"},"s":"F",  "c":"REPL",     "id":21235,   "ctx":"OplogApplier-0","msg":"Failed to apply batch of operations","attr":{"numOperationsInBatch":1,"firstOperation":{"op":"c","ns":"test.$cmd","ui":{"$uuid":"75672829-4c0b-4319-9171-646e0efc1822"},"o":{"create":"coll1","storageEngine":{"inMemory":{"engineConfig":{"inMemorySizeGB":5.0}}},"idIndex":{"v":2,"key":{"_id":1},"name":"_id_"}},"ts":{"$timestamp":{"t":1701489321,"i":1}},"t":3,"v":2,"wall":{"$date":"2023-12-02T03:55:21.689Z"}},"lastOperation":{"op":"c","ns":"test.$cmd","ui":{"$uuid":"75672829-4c0b-4319-9171-646e0efc1822"},"o":{"create":"coll1","storageEngine":{"inMemory":{"engineConfig":{"inMemorySizeGB":5.0}}},"idIndex":{"v":2,"key":{"_id":1},"name":"_id_"}},"ts":{"$timestamp":{"t":1701489321,"i":1}},"t":3,"v":2,"wall":{"$date":"2023-12-02T03:55:21.689Z"}},"failedWriterThread":4,"error":"InvalidOptions: Expected \"wiredTiger\" field, but got: inMemory"}}
      

      This issue does not exist in MongoDB Community, only in MongoDB Enterprise.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Dmitry Ryabtsev
            Votes:
            0 Vote for this issue
            Watchers:
            20 Start watching this issue

              Created:
              Updated:
              Resolved: