SERVER-83830 in-memory storage engine validates storage options during collection creation

GitOrigin-RevId: 60cf47f1a35b86e3fab54d31009b12165e060bca